--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Hold Space To Enter Hyperspeed!
+		    Hold Space For A Surprise!
 	    </footer>
 	</body>
 </html>
